testing Nuxt renderer

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.10.3",
+    "@nuxtjs/dotenv": "^1.4.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
